src/test/deca/context/invalid/provided/12_invalid_cast_boolean_to_string.deca
{
    boolean b;
    string s;

    b = true;
    // Interdit : cast boolean -> string
    s = (string)(b);

    println("Ne devrait jamais s'afficher");
}
